[package]
name = "rust_wasm"
version = "0.1.0"
authors = ["Benedikt Mandelkow <benedikt.mandelkow@rwth-aachen.de>"]
edition = "2018"
publish = false

[dependencies]
wasm-bindgen = "0.2.59"
console_error_panic_hook = { version = "0.1.1"}
wee_alloc = { version = "0.4.2"}

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"

# to build the pkg dir, run wasm-pack build
